# slitechat

./: CMakeLists.txt  ProjectHome.md  README  SLiteChatProject.md
LLChatLib/: Agent.cpp  Agent.h  CMakeLists.txt  ChatterBox.cpp  ChatterBox.h  GoogleTranslate.cpp  GoogleTranslate.h  GridList.cpp  GridList.h  LLChatLib.cpp  LLChatLib.h  LLChatLibExports.h  ManagerImpl.cpp  ManagerImpl.cpp.orig  ManagerImpl.h  SLUrlUtils.cpp  SLUrlUtils.h  StringImpl.cpp  StringImpl.h  lleventpoll.cpp  lleventpoll.h  llsrv.cpp  llsrv.h  lluserauth.cpp  lluserauth.h  llviewernetwork.cpp  llviewernetwork.h  llviewerregion.cpp  llviewerregion.h  llvoavatar.cpp  llvoavatar.h  llvoavatardefines.cpp  llvoavatardefines.h  llwearable.cpp  llwearable.h  llworld.cpp  llworld.h  llxmlrpctransaction.cpp  llxmlrpctransaction.h  noise.h
LLChatLib/llcharacter/: CMakeLists.txt  llanimationstates.cpp  llcharacter.h  lleditingmotion.cpp  lljoint.h  llkeyframemotion.cpp
LLChatLib/llcommon/: CMakeLists.txt  imageids.h  indra_constants.h  llapp.cpp  llapp.h  lldate.h  llerror.cpp  llerrorthread.cpp  llfasttimer.cpp  llfile.cpp  llfile.h  llhash.h  llheartbeat.cpp  llmd5.h  llmemory.h  llpreprocessor.h  llqueuedthread.cpp  llsdserialize.cpp  llsdserialize.h  llsdutil.cpp  llstring.cpp  llstring.h  llstringtable.h  llsys.cpp  llsys.h  lltimer.cpp  lluuid.cpp  llversionviewer.h  stdtypes.h
LLChatLib/llcommon/tinyjson/: tinyjson.hpp
LLChatLib/llinventory/: CMakeLists.txt  lleconomy.cpp  llparcel.cpp  llparcel.h  llpermissions.cpp  llpermissions.h
LLChatLib/llmath/: CMakeLists.txt  llcamera.cpp  llmath.h  llvolume.cpp  llvolume.h  v3color.h  v3math.h
LLChatLib/llmessage/: CMakeLists.txt  llares.cpp  llares.h  llassetstorage.cpp  llbufferstream.cpp  llbufferstream.h  llcachename.cpp  llcachename.h  llcircuit.cpp  llclassifiedflags.cpp  llclassifiedflags.h  llcurl.cpp  llcurl.h  lleventflags.h  llfiltersd2xmlrpc.cpp  llhost.cpp  llhost.h  llhttpassetstorage.cpp  llhttpclient.cpp  llhttpnode.cpp  llhttpnode.h  llinstantmessage.h  lliobuffer.cpp  lliohttpserver.cpp  lliohttpserver.h  lliosocket.cpp  llmail.cpp  llmessagetemplate.cpp  llmessagetemplate.h  llmessagetemplateparser.cpp  llpacketack.cpp  llpacketbuffer.cpp  llpacketbuffer.h  llpacketring.cpp  llpacketring.h  llpumpio.cpp  llpumpio.h  llqueryflags.h  llsdmessagebuilder.cpp  llsdmessagereader.cpp  (+19 more)
LLChatLib/llprimitive/: CMakeLists.txt
LLChatLib/llvfs/: CMakeLists.txt  lldir.cpp  lldir.h  lldir_linux.cpp  lldir_mac.cpp  lldir_solaris.cpp  lldir_solaris.h  lldir_win32.cpp  lldir_win32.h  llvfs.cpp
LLChatLib/llxml/: CMakeLists.txt  llcontrol.cpp  llcontrol.h  llxmlnode.h
SLiteChat/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  Common.cpp  Common.h  Config.h.in  ExportWindow.cpp  ExportWindow.h  ExportWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageDialog.cpp  MessageDialog.h  MessageDialog.ui  Preferences.cpp  Preferences.h  Preferences.ui  SearchWindow.cpp  SearchWindow.h  SearchWindow.ui  Utility.cpp  Utility.h  main.cpp  resources.qrc
SLiteChat/res/: resource  resource.h  resource.rc  slitechat.icns
XGridChat/: CMakeLists.txt  README  Robot.cpp  Robot.h  config.h.cmake  errors.h  main.cpp  version.h.in
XGridChat/examples/: robot_fg.xml  robot_nwg.xml  robot_osg.xml  robot_sl.xml
XGridChat/setup/: CMakeLists.txt  GridTab.cpp  GridTab.h  MainWindow.cpp  MainWindow.h  Tester.cpp  Tester.h  Utility.cpp  Utility.h  main.cpp
cmake/: 00-Common.cmake  01-Configure.cmake  APR.cmake  Boost.cmake  CARes.cmake  CURL.cmake  EXPAT.cmake  FindAPR.cmake  FindCARes.cmake  FindXmlRpcEpi.cmake  MoCheckCSourceCompiles.cmake  OpenSSL.cmake  Toolchain_mingw32.cmake  XmlRpcEpi.cmake  ZLIB.cmake  qt4.cmake
doc/: LLChatLib.doxy  SLiteChat.doxy  gpl.txt  slitechat.xcf
